--- a/app/src/main/res/layout/layout_about_items.xml
+++ b/app/src/main/res/layout/layout_about_items.xml
@@ -4,154 +4,94 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:paddingTop="16dp">
 
-	<RelativeLayout
+	<HorizontalScrollView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingBottom="16dp"
-		android:paddingTop="16dp"
-		android:clickable="true"
-		android:focusable="true"
-		android:background="@drawable/bg_ripple"
-		android:paddingStart="16dp"
-		android:paddingEnd="8dp">
+		android:fillViewport="true"
+		android:layout_marginBottom="24dp">
 
-		<ImageView
-			android:id="@+id/icon_github"
-			android:layout_height="22dp"
-			android:layout_width="22dp"
-			android:scaleType="fitCenter"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_centerVertical="true"
-			app:srcCompat="@drawable/ic_github"/>
-
-		<TextView
-			android:layout_height="wrap_content"
+		<LinearLayout
+			android:orientation="horizontal"
 			android:layout_width="match_parent"
-			android:textSize="16sp"
-			android:textColor="@color/primaryTextColor"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_toEndOf="@id/icon_github"
-			android:layout_centerVertical="true"
-			android:text="@string/user_suggestions"/>
-
-	</RelativeLayout>
-
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingBottom="16dp"
-		android:paddingTop="16dp"
-		android:clickable="true"
-		android:focusable="true"
-		android:background="@drawable/bg_ripple"
-		android:paddingStart="16dp"
-		android:paddingEnd="8dp">
-
-		<ImageView
-			android:id="@+id/icon_telegram"
-			android:layout_height="22dp"
-			android:layout_width="22dp"
-			android:scaleType="fitCenter"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_centerVertical="true"
-			app:srcCompat="@drawable/ic_telegram"/>
-
-		<TextView
 			android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:textSize="16sp"
-			android:textColor="@color/primaryTextColor"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_toEndOf="@id/icon_telegram"
-			android:layout_centerVertical="true"
-			android:text="@string/discussions_on_telegram"/>
+			android:gravity="center">
 
-	</RelativeLayout>
+			<ImageView
+				android:id="@+id/issue_tracker"
+				android:layout_height="30dp"
+				android:layout_width="30dp"
+				android:scaleType="fitCenter"
+				android:layout_centerVertical="true"
+				app:srcCompat="@drawable/ic_bug"
+				android:layout_marginStart="16dp"
+				android:layout_marginEnd="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginBottom="8dp"
+				android:clickable="true"
+				android:focusable="true"
+				android:background="?attr/selectableItemBackgroundBorderless"/>
 
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingBottom="16dp"
-		android:paddingTop="16dp"
-		android:clickable="true"
-		android:focusable="true"
-		android:background="@drawable/bg_ripple"
-		android:paddingStart="16dp"
-		android:paddingEnd="8dp">
+			<ImageView
+				android:id="@+id/discuss"
+				android:layout_height="30dp"
+				android:layout_width="30dp"
+				android:scaleType="fitCenter"
+				android:layout_marginStart="16dp"
+				android:layout_marginEnd="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginBottom="8dp"
+				android:clickable="true"
+				android:focusable="true"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:layout_centerVertical="true"
+				app:srcCompat="@drawable/ic_telegram"/>
 
-		<ImageView
-			android:id="@+id/icon_email"
-			android:layout_height="22dp"
-			android:layout_width="22dp"
-			android:scaleType="fitCenter"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_centerVertical="true"
-			app:srcCompat="@drawable/ic_email"/>
+			<ImageView
+				android:id="@+id/email"
+				android:layout_height="30dp"
+				android:layout_width="30dp"
+				android:scaleType="fitCenter"
+				android:layout_marginStart="16dp"
+				android:layout_marginEnd="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginBottom="8dp"
+				android:clickable="true"
+				android:focusable="true"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:layout_centerVertical="true"
+				app:srcCompat="@drawable/ic_email"/>
 
-		<TextView
-			android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:textSize="16sp"
-			android:textColor="@color/primaryTextColor"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_toEndOf="@id/icon_email"
-			android:layout_centerVertical="true"
-			android:text="@string/about_option_email"/>
+			<ImageView
+				android:id="@+id/website"
+				android:layout_height="30dp"
+				android:layout_width="30dp"
+				android:scaleType="fitCenter"
+				android:layout_marginStart="16dp"
+				android:layout_marginEnd="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginBottom="8dp"
+				android:layout_centerVertical="true"
+				android:clickable="true"
+				android:focusable="true"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				app:srcCompat="@drawable/ic_website"/>
 
-	</RelativeLayout>
+		</LinearLayout>
 
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingBottom="16dp"
-		android:paddingTop="16dp"
-		android:clickable="true"
-		android:focusable="true"
-		android:background="@drawable/bg_ripple"
-		android:layout_marginBottom="16dp"
-		android:paddingStart="16dp"
-		android:paddingEnd="8dp">
-
-		<ImageView
-			android:id="@+id/icon_website"
-			android:layout_height="22dp"
-			android:layout_width="22dp"
-			android:scaleType="fitCenter"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_centerVertical="true"
-			app:srcCompat="@drawable/ic_website"/>
-
-		<TextView
-			android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:textSize="16sp"
-			android:textColor="@color/primaryTextColor"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_toEndOf="@id/icon_website"
-			android:layout_centerVertical="true"
-			android:text="@string/about_option_website"/>
-
-	</RelativeLayout>
+	</HorizontalScrollView>
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Developers"
+		android:text="@string/title_developers"
 		android:layout_marginStart="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="4dp"
 		android:textStyle="bold"
-		android:textSize="16sp"/>
+		android:textSize="18sp"/>
 
 	<View
 		android:background="?android:attr/dividerVertical"
@@ -166,22 +106,19 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="24dp"
 		android:layout_marginEnd="16dp"
-		android:text="\u2022 Akash Yadav\n\u2022 Marvin Stelter"
+		android:text="@string/msg_developers"
 		android:layout_marginBottom="16dp"
-		android:textSize="14sp"
-        android:textColor="@color/secondaryTextColor_lighter"
-		android:autoLink="all"
-		android:linksClickable="true"/>
+		android:textSize="15sp"/>
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Open source licenses"
+		android:text="@string/title_open_source_licenses"
 		android:layout_marginStart="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="4dp"
 		android:textStyle="bold"
-		android:textSize="16sp"/>
+		android:textSize="18sp"/>
 
 	<View
 		android:background="?android:attr/dividerVertical"
@@ -196,12 +133,9 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="24dp"
 		android:layout_marginEnd="16dp"
-        android:textColor="@color/secondaryTextColor_lighter"
-		android:text="AndroidIDE uses open source libraries. You can find the source and the license of the libraries used by clicking on below links."
+		android:text="@string/msg_open_source_licenses"
 		android:layout_marginBottom="4dp"
-		android:textSize="14sp"
-		android:autoLink="all"
-		android:linksClickable="true"/>
+		android:textSize="15sp"/>
 
 	<TextView
 		android:layout_width="match_parent"
@@ -210,8 +144,7 @@
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="16dp"
 		android:id="@+id/licenses"
-        android:textColor="@color/secondaryTextColor_lighter"
-		android:textSize="14sp"/>
+		android:textSize="15sp"/>
 
 	<TextView
 		android:id="@+id/footer_text"
