--- a/app/src/main/res/xml/motion_about.xml
+++ b/app/src/main/res/xml/motion_about.xml
@@ -7,14 +7,27 @@
     <Transition
         app:constraintSetEnd="@+id/end"
         app:constraintSetStart="@+id/start"
-        app:duration="500">
+        app:duration="50">
         
         <OnSwipe
             app:dragDirection="dragUp"
             app:touchAnchorId="@id/about_scroller"/>
         
+        <KeyFrameSet>
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/icon_container"
+                android:alpha="0.0"/>
+            <KeyAttribute
+                app:framePosition="30"
+                app:motionTarget="@id/subtitle"
+                android:alpha="0.0"/>
+        </KeyFrameSet>
+        
     </Transition>
 
+    
+    
     <ConstraintSet
         android:id="@+id/start">
         
@@ -54,7 +67,10 @@
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="24dp"
+            android:scaleX="1.0"
+            android:scaleY="1.0"
+            android:alpha="1.0"/>
 
         <Constraint
             android:layout_width="0dp"
@@ -66,6 +82,19 @@
             android:id="@+id/about_scroller"/>
         
     </ConstraintSet>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 
     <ConstraintSet
         android:id="@+id/end">
@@ -76,35 +105,38 @@
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/icon_anchor"
             android:layout_width="0dp"
-            android:layout_height="200dp"/>
+            android:layout_height="56dp"/>
 
         <Constraint
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/icon_anchor"
             android:id="@+id/icon_container"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginTop="-28dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:alpha="0.0"/>
 
         <Constraint
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icon_container"
+            app:layout_constraintStart_toStartOf="@id/icon_anchor"
+            app:layout_constraintTop_toTopOf="@id/icon_anchor"
+            app:layout_constraintBottom_toBottomOf="@id/icon_anchor"
             android:id="@+id/title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:layout_marginStart="16dp"/>
 
         <Constraint
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/icon_anchor"
             app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintBottom_toBottomOf="@id/icon_anchor"
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:scaleX="0.0"
+            android:scaleY="0.0"
+            android:alpha="0.0"/>
 
         <Constraint
             android:layout_width="0dp"
@@ -112,7 +144,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/subtitle"
+            app:layout_constraintTop_toBottomOf="@id/icon_anchor"
             android:id="@+id/about_scroller"/>
 
     </ConstraintSet>
