--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -147,6 +147,23 @@
                     app:icon="@drawable/ic_diagnostics"
                     app:backgroundTint="@color/primaryColor"
 					app:rippleColor="@color/rippleHighlightColor_light"/>
+                
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+                    android:id="@+id/view_search_results"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:gravity="start|center_vertical"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:text="@string/view_search_results"
+                    android:layout_marginBottom="1dp"
+                    android:textColor="@color/primaryTextColor"
+                    app:iconTint="@color/primaryIconColor"
+                    app:cornerRadius="0dp"
+                    app:icon="@drawable/ic_search"
+                    app:backgroundTint="@color/primaryColor"
+					app:rippleColor="@color/rippleHighlightColor_light"/>
 
 				<com.google.android.material.button.MaterialButton
 					style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
@@ -292,6 +309,36 @@
 
         </LinearLayout>
         
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/searchResultsContainer"
+            android:visibility="gone"
+            android:background="@color/primaryDarkColor"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_height="56dp"
+                android:layout_width="match_parent"
+                android:id="@+id/searchResultsToolbar"
+                android:elevation="8dp"
+                android:background="@color/primaryDarkColor"
+                app:title="@string/view_search_results"
+                app:navigationIcon="@drawable/ic_chevron_down"
+                app:navigationIconTint="@color/primaryIconColor"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/searchResultsListContainer"/>
+
+        </LinearLayout>
+        
         <TextView
             android:id="@+id/symbolText"
             android:layout_height="wrap_content"
@@ -351,4 +398,3 @@
 	</com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
-
