Fixed some bugs/mistakes - Changed color of ActionMode's Overflow menu icon to match other icons - 'chmod' to $HOME command should not be shown to user - Remove logging from StudioApp - Fixed icon of 'Code navigation' - Use AppCompat method to start ActionMode - Forcibly show icon of menu items

--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -106,7 +106,7 @@
 		android:title="@string/save"
 		app:showAsAction="ifRoom"/>
     <item
-        android:icon="@drawable/ic_navigation"
+        android:icon="@drawable/ic_code"
         android:id="@+id/menuEditor_navigate"
         android:title="@string/menu_navigate"
 		app:showAsAction="ifRoom">
