--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,29 @@
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
         
         <Button
+            android:id="@+id/open_terminal"
+            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:text="@string/btn_terminal"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textColor="@color/primaryTextColor"
+            android:elevation="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/open_project"
+            app:layout_constraintStart_toStartOf="@id/create_project"
+            app:rippleColor="@color/rippleHighlightColor"
+            app:icon="@drawable/ic_terminal"
+            app:iconPadding="8dp"
+            app:iconTint="@color/primaryTextColor"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
+        
+        <Button
             android:id="@+id/goto_preferences"
             android:layout_height="56dp"
             android:layout_width="wrap_content"
@@ -143,7 +166,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/open_project"
+            app:layout_constraintTop_toBottomOf="@id/open_terminal"
             app:layout_constraintStart_toStartOf="@id/create_project"
             app:rippleColor="@color/rippleHighlightColor"
             app:icon="@drawable/ic_settings"
