--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -151,4 +151,9 @@
                 app:showAsAction="never"/>
         </menu>
     </item>
+    <item
+        android:icon="@drawable/ic_info"
+        android:id="@+id/menuEditor_projectInfo"
+        android:title="@string/menu_project_info"
+        app:showAsAction="ifRoom"/>
 </menu>
