--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
     
-    
+    <com.itsaky.androidide.views.virtualkeys.VirtualKeysView
+        android:id="@+id/virtual_key_table"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:background="@android:color/black"/>
     
 </LinearLayout>
