--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -28,11 +28,6 @@
 				android:background="@color/primaryDarkColor"
 				android:id="@+id/editor_toolbar"/>
             
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/secondaryColor"/>
-            
 			<com.itsaky.androidide.views.MaterialBanner
 				android:id="@+id/syncBanner"
 				android:layout_height="wrap_content"
@@ -44,10 +39,9 @@
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/file_tab_height"
 				android:background="@color/primaryDarkColor"
-                app:tabIndicator="@drawable/bg_file_tab_indicator"
                 app:tabIndicatorColor="@color/secondaryColor"
                 app:tabIndicatorGravity="stretch"
-				app:tabIndicatorHeight="32dp"
+				app:tabIndicatorHeight="@dimen/file_tab_height"
                 app:tabTextAppearance="@style/AppTheme.TabLayout.Title"
                 app:tabSelectedTextColor="@color/primaryTextColor"
 				app:tabMode="scrollable"
